Change statusz template.

--- a/server/templates/statusz.html
+++ b/server/templates/statusz.html
@@ -3,9 +3,7 @@
 <ul>
   {{range .Patterns}}
     <li>
-      <a href="{{.}}">
-        {{.}}
-      </a>
+      Show <a href="{{.}}">{{.}}</a>.
     </li>
   {{end}}
 </ul>
